[tool.poetry]
name = "agility_data_pipeline"
version = "0.1.0"
description = ""
authors = ["julesim <julien.simard@b-yond.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "0.21.0"
fastapi = "0.94.0"
pytest = "7.4.2"
pathlib = "1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

